# cryptoapi

./: .env  Cargo.toml
src/: main.rs
src/routes/: home_routes.rs
src/routes/handlers/: home_handler.rs
src/utils/: mod.rs
